--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Changelog for 'id3'.
 
-2015-364 (W52:
+2017-121 (W18):
+  fileexp.cpp: [bugfix] files with [] in them were not being found
+  main.cpp: [cli change] added -X option for disabling wildcard handling
+
+2015-364 (W52):
   main.cpp: [cli change] -s/-u/-E also work without preceding -1/-2/-3;
     these switches will then apply to all tags (where relevant).
     note that -E is already the default for ID3v2/Lyrics3 in this case.
