--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,10 @@ Changelog for 'id3'.
   fileexp.cpp: [bugfix] files with [] in them were not being found
   main.cpp: [cli change] added -X option for disabling wildcard handling
 
+2016-312 (W45):
+  main.cpp: [cli change] added --list-genres/-L switch (for ID3v1 genres)
+  id3v1.c: added genres introduced after the release of v0.78
+
 2015-364 (W52):
   main.cpp: [cli change] -s/-u/-E also work without preceding -1/-2/-3;
     these switches will then apply to all tags (where relevant).
