change email address (many thanks fly out to Floris a.k.a. vertigo for supporting this for the past 20 years)

--- a/INSTALL
+++ b/INSTALL
@@ -168,6 +168,6 @@ E.g: "make install prefix=$HOME" to install in $HOME/bin instead. See inside
   http://www.mingw.org/
 
 ---------------------------------------------------------------
-| contact: squell@alumina.nl
+| contact: info@squell.net
 -------------------------------------------------------------
 
