--- a/README
+++ b/README
@@ -373,7 +373,7 @@
 / _` | || |  _| ' \/ _ \ '_|
 \__,_|\_,_|\__|_||_\___/_|  
                             
-       Written by Marc R. Schoolderman <squell@alumina.nl>.
+       Written by Marc R. Schoolderman <info@squell.net>.
 
                       _      _   _   
  __ ___ _ __ _  _ _ _(_)__ _| |_| |_ 
