--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Changelog for 'id3'.
 
+2024-012 (W02):
+  added ability to escape '[', '*' and '?' using a backslash in filenames
+
 2023-180 (W26):                                ---------[v0.81]-----------
   added test cases from a project to increase test coverage
 
